[package]
name = "rustdid"
version = "0.1.0"
edition = "2021"

[dependencies]
base58 = "0.2.0"
base64 = "0.22.1"
futures-lite = "2.5.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
miette = { version = "7.4.0", features = ["fancy"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
smol = "2.0.2"
surf = "2.3.2"
time = { version = "0.3.36", features = ["serde"] }
url = "2.5.4"

[dev-dependencies]
tempfile = "3.14.0"
wiremock = "0.6.2"
