[package]
name = "rustdid"
version = "0.1.0"
edition = "2021"
authors = ["@mekaem"]
description = "A CLI tool for creating ATProto did:web accounts"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/mekaem/rustdid"

[dependencies]
base58 = "0.2.0"
base64 = "0.22.1"
crossterm = "0.28.1"
futures-lite = "2.5.0"
futures-util = "0.3.31"
k256 = { version = "0.13.4", features = ["pkcs8"] }
miette = { version = "7.4.0", features = ["fancy"] }
openssl-sys = { version = "0.9.104", features = ["vendored"] }
owo-colors = "4.1.0"
rand = "0.8.5"
ratatui = "0.29.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
smol = "2.0.2"
surf = "2.3.2"
time = { version = "0.3.36", features = ["serde"] }
url = "2.5.4"

[dev-dependencies]
tempfile = "3.14.0"
wiremock = "0.6.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = 'abort'
strip = true
debug = false
